--- a/frontend/movie_details/templates/index.html
+++ b/frontend/movie_details/templates/index.html
@@ -35,18 +35,13 @@
         }
 
         .movie-details {
-            flex: 1;
+            flex: 1.5;
             min-width: 300px;
             padding: 30px;
             background: linear-gradient(135deg, #ffffff, #f0f0f0);
             border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .movie-details:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
         }
 
         .poster {
@@ -82,11 +77,6 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
-        .trivia:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-        }
-
         .trivia button {
             margin: 5px;
             padding: 10px 20px;
@@ -109,6 +99,24 @@
             opacity: 0.7;
         }
 
+        /* Aggiungi questa parte al tuo CSS */
+        .streaming-button {
+            background-color: orange;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 20px;
+            cursor: pointer;
+            transition: transform 0.3s ease, background-color 0.3s ease;
+        }
+
+        .streaming-button:hover {
+            transform: scale(1.05);
+            /* Ingrandisce il bottone */
+            background-color: #d35400;
+            /* Scurisce il bottone */
+        }
+
+
         ::-webkit-scrollbar {
             -webkit-appearance: none;
             width: 7px;
@@ -121,12 +129,17 @@
         }
 
         .spotify {
-            padding: 20px;
-            text-align: center;
+            display: flex;
+            align-items: center;
+            padding: 30px;
+            text-align: left;
             background: linear-gradient(135deg, #1DB954, #1AA34A);
             border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             width: 350px;
+            cursor: pointer;
+            position: relative;
+            overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
@@ -135,25 +148,51 @@
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
         }
 
-        .spotify a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
+        .spotify img {
+            border-radius: 8px;
+            width: 100px;
+            height: 100px;
+            object-fit: cover;
+        }
+
+        .spotify .playlist-info {
+            flex: 1;
+            margin-left: 15px;
             display: flex;
             flex-direction: column;
-            align-items: center;
+            justify-content: center;
+            color: white;
         }
 
-        .spotify img {
-            margin-bottom: 10px;
-            margin-top: 20px;
-            width: 200px;
-            transition: transform 0.3s ease;
+        .spotify .playlist-info h2 {
+            margin: 0;
+            font-size: 1.2em;
+            font-weight: bold;
         }
 
-        .spotify img:hover {
-            transform: scale(1.05);
+        .spotify .playlist-info p {
+            margin: 5px 0 0;
+            font-size: 0.9em;
         }
+
+        .spotify .spotify-logo {
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            width: 60px;
+            margin: 10px;
+            /* Aumenta la larghezza */
+            height: auto;
+            /* Mantieni le proporzioni */
+            opacity: 0.8;
+            transition: opacity 0.3s ease;
+        }
+
+
+        .spotify:hover .spotify-logo {
+            opacity: 1;
+        }
+
 
         @media (max-width: 768px) {
             .container {
@@ -195,6 +234,7 @@
                 opacity: 0;
                 transform: translateY(20px);
             }
+
             to {
                 opacity: 1;
                 transform: translateY(0);
@@ -215,7 +255,7 @@
             </div>
             <img id="poster" class="poster" src="" alt="Poster del film">
             <div class="video-container">
-                <iframe width="560" height="315" title="YouTube video player" frameborder="0"
+                <iframe  title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
@@ -236,14 +276,17 @@
             </div>
 
             <!-- Spotify -->
-            <div class="spotify">
-                <a id="spotify-link" href="#" target="_blank">
-                    <img id="spotify-logo"
-                        src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_White.png"
-                        alt="Spotify Logo">
-                    <p id="spotify-text">Direct Link to Spotify Playlist</p>
-                </a>
+            <div class="spotify" id="spotify-container" onclick="openSpotify()">
+                <img id="spotify-cover" src="" alt="Playlist Cover">
+                <div class="playlist-info">
+                    <h2 id="playlist-title">Titolo Playlist</h2>
+                    <p id="playlist-description">Ascolta su Spotify</p>
+                </div>
+                <img id="spotify-logo" class="spotify-logo"
+                    src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_White.png"
+                    alt="Spotify Logo">
             </div>
+
 
             <!-- Streaming Availability -->
             <div class="trivia">
@@ -307,20 +350,37 @@
 
         async function fetchSpotifyPlaylist(movieTitle) {
             try {
-                const url = `http://localhost:5004/api/v1/search_playlist?playlist_name=${encodeURIComponent(movieTitle)}&soundtrack`;
+                const url = `http://localhost:5004/api/v1/search_playlist?playlist_name=${encodeURIComponent(movieTitle)}`;
                 const response = await fetch(url);
                 const data = await response.json();
 
-                if (data.playlist_url) {
-                    const spotifyLink = document.getElementById("spotify-link");
-                    spotifyLink.href = data.playlist_url;
+                if (data.spotify_url && data.cover_url && data.name) {
+                    // Aggiorna i dettagli del contenitore
+                    const spotifyContainer = document.getElementById("spotify-container");
+                    document.getElementById("spotify-cover").src = data.cover_url;
+                    document.getElementById("playlist-title").textContent = data.name;
+                    spotifyContainer.dataset.link = data.spotify_url;
                 } else {
-                    console.error("Nessuna playlist trovata");
+                    console.error("Dati insufficienti per la playlist");
                 }
             } catch (error) {
                 console.error("Errore durante il recupero della playlist:", error);
             }
         }
+
+        // Funzione per aprire il link della playlist
+        function openSpotify() {
+            const spotifyContainer = document.getElementById("spotify-container");
+            const link = spotifyContainer.dataset.link;
+            if (link) {
+                window.open(link, "_blank");
+            } else {
+                console.error("Link Spotify non disponibile");
+            }
+        }
+
+
+
 
         // Modifica sfondo in base ai colori del poster
         function updateBackground(posterUrl) {
@@ -397,16 +457,16 @@
                 // Costruisci una stringa con i dati ricevuti, mostrando solo il logo e un bottone per il service_type
                 const availabilityList = data.map(item => {
                     return `
-                <div style="display: flex; align-items: center; margin-bottom: 10px;">
-                    <img src="${item.logo}" alt="${item.service_name}" style="width: 100px; height: 100px; margin-right: 30px; margin-left: 20px;">
-                    <a href="${item.link}" target="_blank" style="text-decoration: none;">
-                        <div style="background-color: orange; color: white; padding: 10px 20px; border-radius: 20px; cursor: pointer;">
-                            ${item.service_type}
-                        </div>
-                    </a>
-                </div>
-            `;
-                }).join(''); // Unisce i risultati senza salto di riga
+                    <div style="display: flex; align-items: center; margin-bottom: 10px;">
+                        <img src="${item.logo}" alt="${item.service_name}" style="width: 100px; height: 100px; margin-right: 30px; margin-left: 20px;">
+                        <a href="${item.link}" target="_blank" style="text-decoration: none;">
+                            <div class="streaming-button">
+                                ${item.service_type}
+                            </div>
+                        </a>
+                    </div>
+                `;
+                }).join('');
 
                 // Aggiungi i risultati alla pagina
                 document.getElementById('streaming-description').innerHTML = availabilityList;
@@ -423,9 +483,9 @@
 
 
 
-         const movieId = "tt1375666"; // Cambia con l'ID del film che vuoi cercare // INCEPTION
+        //const movieId = "tt1375666"; // Cambia con l'ID del film che vuoi cercare // INCEPTION
         //const movieId = "tt0317219"; // Cambia con l'ID del film che vuoi cercare // CARS
-        //const movieId = "tt0120338"; // Cambia con l'ID del film che vuoi cercare // TITANIC
+        const movieId = "tt0120338"; // Cambia con l'ID del film che vuoi cercare // TITANIC
         //const movieId = "tt1679335"; // Cambia con l'ID del film che vuoi cercare // TROLLS
         fetchMovieDetails(movieId);
         fetchStreamingAvailability(movieId);
@@ -433,5 +493,3 @@
 </body>
 
 </html>
-
-
