--- a/frontend/templates/movie-list.html
+++ b/frontend/templates/movie-list.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layout con due contenitori</title>
-    <link rel="stylesheet" href="/static/css/login.css">
+    <title>MovieMatch - Browse Movies</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <!-- Change this line from login.css to movie-list.css -->
+    <link rel="stylesheet" href="/static/css/movie-list.css">
 </head>
-
 <body>
     <div class="container">
         <div class="left-box">
@@ -24,5 +24,4 @@
 
     <script src="/static/js/movie-list.js"></script>
 </body>
-
 </html>
