refactoring for consistent message patterns

--- a/frontend/templates/movie-list.html
+++ b/frontend/templates/movie-list.html
@@ -12,7 +12,7 @@
         <div class="left-box">
             <div class="search-bar">
                 <input type="text" placeholder="Search for a movie..." class="search-input" id="search-input">
-                <button class="search-button" onclick="loadMovies()">Search</button>
+                <button class="search-button" id="search-button">Search</button>
             </div>
             <div class="movie-list" id="movie-list">
                 <div class="loading-spinner" id="loading-spinner"></div>
